--- a/lang/en.yml
+++ b/lang/en.yml
@@ -3,6 +3,7 @@ en:
     DESCRIPTION: 'Lists violations caught by the Content Security Policy. For more details see <a href="{url}" target="_blank">the MDN documentation</a>.'
     TITLE: 'Content security violations'
   Signify\SecurityHeaders\Forms\GridField\GridFieldDeleteRelationsButton:
+    DELETE: 'Delete {pluralName}'
     DELETE_ALL: 'Delete all {pluralName}'
     DELETED:
       one: 'Deleted one record.'
@@ -12,7 +13,6 @@ en:
     FILTER_INVERT: 'Invert Filter'
     FILTER_TYPE: '"{fieldName}" Filter Type'
     NOT_DELETED: 'Nothing to delete.'
-    TITLE_MODAL: 'Delete {pluralName}'
     VALIDATION_RequireFilters: 'At least one filter checkbox or "Delete all" must be checked.'
     VALIDATION_TooManyFilters: 'A filter checkbox and "Delete all" cannot be checked simultaneously.'
     VALIDATION_FormMessage: 'Please correct the validation errors.'
