refactor: Revert namespace to a simplified namespace.
The class names which might concievably be reused over different modules already have namespace protection in their names (e.g. Document is CSPDocument).
This allows for classes that could be reusable such as GridFieldDeleteRelationsButton to be refactored into their own modules without breaking backwards compatibility.

--- a/lang/en.yml
+++ b/lang/en.yml
@@ -1,8 +1,8 @@
 en:
-  Signify\SecurityHeaders\Reports\CSPViolationsReport:
+  Signify\Reports\CSPViolationsReport:
     DESCRIPTION: 'Lists violations caught by the Content Security Policy. For more details see <a href="{url}" target="_blank">the MDN documentation</a>.'
     TITLE: 'Content security violations'
-  Signify\SecurityHeaders\Forms\GridField\GridFieldDeleteRelationsButton:
+  Signify\Forms\GridField\GridFieldDeleteRelationsButton:
     DELETE: 'Delete {pluralName}'
     DELETE_ALL: 'Delete all {pluralName}'
     DELETED:
